# git-from-scratch

./: .gitignore  README.md
C++/: CMakeLists.txt  main.cpp  project.txt
C++/src/: CommandLine.cpp  Repository.cpp  VCS.cpp
C++/src/include/: CommandLine.hpp  Repository.hpp  VCS.hpp
Java/: project.txt
Python/: test.py
Python/rosa/: pyproject.toml
Python/rosa/app/: cli.py  commands.py  config.py  gitignore.py  index.py  objects.py  refs.py  repository.py
Rust/git-clone/: Cargo.toml
Rust/git-clone/src/: commands.rs  main.rs  utils.rs
Rust/git-clone/src/commands/: cat_file.rs  commit.rs  hash_list.rs  init.rs  read_tree.rs  write_tree.rs
